fix: header link select z-index 변경

--- a/src/index.css
+++ b/src/index.css
@@ -181,6 +181,8 @@ table {
   cursor: pointer;
   padding: 16px 0;
   margin-top: -1px;
+
+  z-index: 100;
 }
 
 .select .optionWrap .option {
